added more to index

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
 <body>
 
-  <p>Hello, world!</p>
+  <h1>Hello, world!</h1>
+  <h4>This is a demonstration for how to use GitHub</h4>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="js/script.js"></script>
+  <p>I hope this demonstration is useful to you and you can learn how to organize your project from this.</p>
+
+
 </body>
 
 </html>
