--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
   <p>I hope this demonstration is useful to you and you can learn how to organize your project from this.</p>
 
+  <h3>This is how branches will look</h3>
+  <img src="https://guides.github.com/activities/hello-world/branching.png" alt="Github Branches">
 
 </body>
 
