--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <meta name="author" content="">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
+<div class="container">
+
 
   <h1>Hello, world!</h1>
   <h4>This is a demonstration for how to use GitHub</h4>
@@ -21,7 +23,7 @@
 
   <h3>This is how branches will look</h3>
   <img src="https://guides.github.com/activities/hello-world/branching.png" alt="Github Branches">
-
+</div>
 </body>
 
 </html>
